[tool.poetry]
name = 'logviewer'
version = '1.1.2'
description = "Modmail is similar to Reddit's Modmail, both in functionality and purpose. It serves as a shared inbox for server staff to communicate with their users in a seamless way."
license = 'GPL-3.0-only'
authors = [
    'kyb3r <noemail@example.com>',
    '4jr <noemail@example.com>',
    'Taki <noemail@example.com>'
]
readme = 'README.md'
repository = 'https://github.com/modmail-dev/logviewer'
homepage = 'https://github.com/modmail-dev/logviewer'
keywords = ['discord', 'modmail']
packages = [
    {include = "logviewer"},
]

[tool.poetry.dependencies]
python = "^3.9"
aiofiles = {version = "^22.1.0", python = "<4.0"}
dnspython = "^2.2.1"
httptools = "^0.5.0"
jinja2 = "3.1.2"
markupsafe = "2.1.1"
motor = "3.0.0"
multidict = "6.0.2"
natural = "0.2.0"
pymongo = {version = "^4.2.0", extras = ["srv"]}
python-dateutil = "2.8.2"
python-dotenv = "0.18.0"
sanic = "22.6.2"
sanic-routing = "22.3.0"
six = "1.16.0"
ujson = "5.5.0"
uvloop = "0.17.0"
websockets = "10.3"

[tool.poetry.scripts]
logviewer = "logviewer:main"

[tool.pylint.format]
max-line-length = "110"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
